--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-landingpage-template",
-  "homepage": "/",
+  "homepage": "http://applanding.canerates.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
