--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "framer-motion": "^11.11.9",
+    "i18next": "^24.1.2",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.2.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
